Add evaluation to train notebook

--- a/Predict-dataset.ipynb
+++ b/Predict-dataset.ipynb
@@ -11,7 +11,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from tqdm.auto import tqdm\n",
-    "from transformers import DistilBertForSequenceClassification, file_utils, Pipeline, AutoTokenizer, pipeline\n",
+    "from transformers import DistilBertForSequenceClassification, AutoTokenizer, pipeline\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
