--- a/emotions-training.ipynb
+++ b/emotions-training.ipynb
@@ -27,12 +27,14 @@
    "source": [
     "from datasets import load_dataset\n",
     "import pandas as pd\n",
-    "from transformers import Trainer, TrainingArguments, BertForSequenceClassification, DistilBertForSequenceClassification, AdamW, AutoTokenizer, PretrainedConfig, file_utils, TextClassificationPipeline, Pipeline\n",
+    "from transformers import Trainer, TrainingArguments, BertForSequenceClassification, DistilBertForSequenceClassification, AdamW, AutoTokenizer, PretrainedConfig, file_utils, TextClassificationPipeline, Pipeline, pipeline\n",
     "from torch.utils.data import DataLoader\n",
     "import torch\n",
     "import numpy as np\n",
     "from tqdm.auto import tqdm\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.metrics import confusion_matrix, precision_recall_fscore_support\n",
     "\n",
     "from source.emotion import all_emotions\n",
     "from source.classification_utils import MultiLabelTextClassification, analyze_result"
@@ -279,7 +281,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze the model"
+    "# Analyze the model\n",
+    "Choose to analyze either the supervised training model from above or a zeroshot classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Supervised classification model"
    ]
   },
   {
@@ -289,15 +299,7 @@
    "outputs": [],
    "source": [
     "# load best model\n",
-    "model2 = DistilBertForSequenceClassification.from_pretrained(best_model_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model2 = DistilBertForSequenceClassification.from_pretrained(best_model_path)\n",
     "prediction_trainer = MultilabelTrainer(\n",
     "    model=model2,                         # the instantiated 🤗 Transformers model to be trained\n",
     "    args=training_args,                  # training arguments, defined above\n",
@@ -310,35 +312,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = prediction_trainer.predict(val_dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = output.predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "output = prediction_trainer.predict(test_dataset)\n",
+    "y_true = np.copy(output.label_ids)\n",
+    "y_pred = np.copy(output.predictions)\n",
     "y_pred = np.exp(y_pred) / (1+np.exp(y_pred))\n",
-    "y_true = output.label_ids"
+    "prediction_threshold = 0.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zero-shot model"
    ]
   },
   {
@@ -347,7 +332,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.mean((y_pred - y_true)**2)"
+    "zero_shot_classifier = \"typeform/distilbert-base-uncased-mnli\"\n",
+    "zero_shot_pipeline = pipeline(\"zero-shot-classification\", device=0, model=zero_shot_classifier, tokenizer = zero_shot_classifier)"
    ]
   },
   {
@@ -356,22 +342,247 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted_emotions = {}\n",
-    "for p in main_characters:\n",
-    "    predicted_emotions[p] = list()\n",
+    "y_pred = np.zeros((len(test_dataset), len(all_emotions)))\n",
+    "label2id = {v:k for k,v in id2label.items()}\n",
+    "for i, row in enumerate(tqdm(test_df.itertuples(), total=len(test_df))):\n",
+    "    prediction = zero_shot_pipeline(row.text, all_emotions, multi_label=True)\n",
+    "    for emotion, score in zip(prediction['labels'], prediction['scores']):\n",
+    "        y_pred[i][label2id[emotion]] = score\n",
     "\n",
-    "for row in tqdm(dataset.itertuples(), total=len(dataset)):\n",
-    "    #prediction = zero_shot_pipeline(row.line, labels, multi_label=True)\n",
-    "    #if len(row.line) == 1:\n",
-    "    #    prediction = [prediction]\n",
-    "    #prediction = [[{'label' : label, 'score': value} for label, value in zip(sentence['labels'], sentence['scores'])] for sentence in prediction]\n",
-    "    #result = analyze_result(prediction, .8)\n",
-    "    prediction = inference_pipeline(row.line)\n",
-    "    result = analyze_result(prediction, .2)\n",
-    "    \n",
-    "    \n",
-    "    result = [(pred['label'], pred['score']) for pred in result[0]] \n",
-    "    predicted_emotions[row.person].append(result)"
+    "y_true = test_oh_labels.copy()\n",
+    "prediction_threshold = 0.8\n",
+    "\n",
+    "#no_neutral = y_true[:, 27] != 1\n",
+    "#y_true = y_true[no_neutral]\n",
+    "#y_pred = y_pred[no_neutral]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Continue here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_thresholded = (y_pred > prediction_threshold).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How off are we on average?\n",
+    "Uses MSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean((y_true[y_true == 1] - y_pred[y_true == 1])**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean((y_true[y_true == 0] - y_pred[y_true == 0])**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What if we threshold it?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean((y_true[y_true == 1] - y_pred_thresholded[y_true == 1])**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean((y_true[y_true == 0] - y_pred_thresholded[y_true == 0])**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Num different emotions in true and predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_folder = \"graphics/analysis/supervised/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_largest_charge_distribution(true_charge_counts, pred_charge_counts, charges, output_folder):\n",
+    "    plt.figure()\n",
+    "    ax = plt.subplot(111)\n",
+    "    bar_width = 0.3\n",
+    "    ax.bar(np.array(charges)-bar_width/2, true_charge_counts, width=bar_width)\n",
+    "    ax.bar(np.array(charges)+bar_width/2, pred_charge_counts, width=bar_width)\n",
+    "    ax.set_title('Distribution of Number of Different Emotions')\n",
+    "    ax.legend([\"true counts\", \"predicted counts\"])\n",
+    "    plt.xlabel(\"Number of Emotions\")\n",
+    "    plt.ylabel(\"Count\")\n",
+    "    plt.savefig(output_folder + 'emotion-distribution')\n",
+    "\n",
+    "def plot_largest_charge_confusion_matrix(y_true, y_pred, charges, output_folder):\n",
+    "    plt.figure(figsize=(20,20))\n",
+    "    cm = confusion_matrix(y_true, y_pred, normalize='true')\n",
+    "    sns.heatmap(cm, cmap='Blues',xticklabels=charges, yticklabels=charges, annot=True, fmt=\".2f\")\n",
+    "    plt.xlabel(\"Predicted\")\n",
+    "    plt.ylabel(\"Actual\")\n",
+    "    plt.title(\"Percent predicted, confusion matrix\")\n",
+    "    plt.savefig(output_folder + 'confusion-matrix')\n",
+    "\n",
+    "def plot_precision_recall_fscore(y_true, y_pred, charges, output_folder):\n",
+    "    plt.figure(figsize=(20,5))\n",
+    "    precision_recall_fscore = np.array(precision_recall_fscore_support(y_true, y_pred)[:-1])\n",
+    "    ax = sns.heatmap(precision_recall_fscore,\n",
+    "                     cmap='Blues',\n",
+    "                     xticklabels=charges,\n",
+    "                     yticklabels=['Precision', 'Recall', 'Fscore'],\n",
+    "                     annot=True)\n",
+    "    ax.set_yticklabels(ax.get_yticklabels(), rotation=0)\n",
+    "    plt.title('Precision, Recall and Fscore for charges')\n",
+    "    plt.savefig(output_folder + 'prec-rec-fscore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_label_info(input_data):\n",
+    "    return np.unique(np.sum(input_data, axis=1), return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "different_labels_true, different_label_counts_true = get_label_info(y_true)\n",
+    "different_labels_pred, different_label_counts_pred = get_label_info(y_pred_thresholded)\n",
+    "all_x = np.array(list(set(different_labels_pred).union(different_labels_true)))\n",
+    "\n",
+    "different_label_counts_true_expanded = np.zeros(len(all_x))\n",
+    "for i, label in enumerate(different_labels_true):\n",
+    "    different_label_counts_true_expanded[label] = different_label_counts_true[i]\n",
+    "different_label_counts_pred_expanded = np.zeros(len(all_x))\n",
+    "for i, label in enumerate(different_labels_pred):\n",
+    "    different_label_counts_pred_expanded[label] = different_label_counts_pred[i]\n",
+    "\n",
+    "plot_largest_charge_distribution(different_label_counts_true_expanded,\n",
+    "                                 different_label_counts_pred_expanded,\n",
+    "                                 all_x,\n",
+    "                                 output_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "single_emotion_rows = np.sum(y_true, axis=1) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Only 1 emotion rows, take the highest prediction as score\n",
+    "y_true_single = np.argmax(y_true[single_emotion_rows], axis=1)\n",
+    "y_pred_single = np.argmax(y_pred[single_emotion_rows], axis=1)\n",
+    "plot_largest_charge_confusion_matrix(y_true_single, y_pred_single, all_emotions, output_folder)\n",
+    "plot_precision_recall_fscore(y_true_single, y_pred_single, all_emotions, output_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How do we match when we consider topk?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_topk_matching(input_prediction, true_values, topk_max):\n",
+    "    any_match = []\n",
+    "    all_match = []\n",
+    "    tested_topk = range(1, topk_max)\n",
+    "    for topk in tested_topk:\n",
+    "        topk_prediction = np.argsort(input_prediction, axis=1)[:, -topk:]#np.argpartition(input_prediction, -topk)[:, -topk:]\n",
+    "        correct_rows_any = np.zeros(len(true_values), dtype=bool)\n",
+    "        correct_rows_all = np.zeros(len(true_values), dtype=bool)\n",
+    "        for i, row in enumerate(true_values):\n",
+    "            correct_rows_any[i] = np.any(np.isin(np.argwhere(row).flatten(), topk_prediction[i]))\n",
+    "            correct_rows_all[i] = np.all(np.isin(np.argwhere(row).flatten(), topk_prediction[i]))\n",
+    "        any_match.append(correct_rows_any.mean())\n",
+    "        all_match.append(correct_rows_all.mean())\n",
+    "        \n",
+    "    plt.plot(tested_topk, any_match, label=\"match any\")\n",
+    "    plt.plot(tested_topk, all_match, label=\"match all\")\n",
+    "    plt.legend()\n",
+    "    plt.ylabel(\"Percent correct\")\n",
+    "    plt.xlabel(\"topk considered\")\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_topk_matching(y_pred, y_true, 29)\n",
+    "\n",
+    "y_pred_masked = y_pred.copy()\n",
+    "y_pred_masked[y_pred_masked < prediction_threshold] = 0\n",
+    "plot_topk_matching(y_pred_masked, y_true, 29)"
    ]
   },
   {
