--- a/emotions-training.ipynb
+++ b/emotions-training.ipynb
@@ -214,33 +214,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Training"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 1000,
-     "referenced_widgets": [
-      "d7a86da24f524d3d863e1eef21a89ddd",
-      "0f1332b07e22438b8259dc4cd13679ee",
-      "c15542a3fc8342968f20e3eb9cf4437d",
-      "5b3551e7642f485e9ef48b29b6e85731",
-      "b1da8e61370945c085cb79de46bb3ca5",
-      "8e8716d321874e67a1cb20626b2affa9",
-      "7881914799e04f898d888b0accb5cee7",
-      "0e70cfd8e1a94282a85ce47723d92423"
-     ]
-    },
-    "id": "kVmsfRyCvZm1",
-    "outputId": "105a701b-42a1-4781-e7dd-49954795d433"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "training_args = TrainingArguments(\n",
@@ -256,9 +232,23 @@
     "    evaluation_strategy=\"steps\",\n",
     "    load_best_model_at_end=True,     # Defaults to loss as criterion\n",
     "\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = DistilBertForSequenceClassification.from_pretrained(model_describ, num_labels = n_labels, id2label=id2label)\n",
-    "\n",
     "trainer = MultilabelTrainer(\n",
     "    model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
     "    args=training_args,                  # training arguments, defined above\n",
@@ -437,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_folder = \"graphics/analysis/supervised/\""
+    "output_folder = \"graphics/analysis/\""
    ]
   },
   {
@@ -446,37 +436,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_largest_charge_distribution(true_charge_counts, pred_charge_counts, charges, output_folder):\n",
+    "def plot_largest_emotion_distribution(true_emotion_counts, pred_emotion_counts, emotions, output_folder):\n",
     "    plt.figure()\n",
     "    ax = plt.subplot(111)\n",
     "    bar_width = 0.3\n",
-    "    ax.bar(np.array(charges)-bar_width/2, true_charge_counts, width=bar_width)\n",
-    "    ax.bar(np.array(charges)+bar_width/2, pred_charge_counts, width=bar_width)\n",
+    "    ax.bar(np.array(emotions)-bar_width/2, true_emotion_counts, width=bar_width)\n",
+    "    ax.bar(np.array(emotions)+bar_width/2, pred_emotion_counts, width=bar_width)\n",
     "    ax.set_title('Distribution of Number of Different Emotions')\n",
     "    ax.legend([\"true counts\", \"predicted counts\"])\n",
     "    plt.xlabel(\"Number of Emotions\")\n",
     "    plt.ylabel(\"Count\")\n",
     "    plt.savefig(output_folder + 'emotion-distribution')\n",
     "\n",
-    "def plot_largest_charge_confusion_matrix(y_true, y_pred, charges, output_folder):\n",
+    "def plot_largest_emotion_confusion_matrix(y_true, y_pred, emotions, output_folder):\n",
     "    plt.figure(figsize=(20,20))\n",
     "    cm = confusion_matrix(y_true, y_pred, normalize='true')\n",
-    "    sns.heatmap(cm, cmap='Blues',xticklabels=charges, yticklabels=charges, annot=True, fmt=\".2f\")\n",
+    "    sns.heatmap(cm, cmap='Blues',xticklabels=emotions, yticklabels=emotions, annot=True, fmt=\".2f\")\n",
     "    plt.xlabel(\"Predicted\")\n",
     "    plt.ylabel(\"Actual\")\n",
     "    plt.title(\"Percent predicted, confusion matrix\")\n",
     "    plt.savefig(output_folder + 'confusion-matrix')\n",
     "\n",
-    "def plot_precision_recall_fscore(y_true, y_pred, charges, output_folder):\n",
+    "def plot_precision_recall_fscore(y_true, y_pred, emotions, output_folder):\n",
     "    plt.figure(figsize=(20,5))\n",
     "    precision_recall_fscore = np.array(precision_recall_fscore_support(y_true, y_pred)[:-1])\n",
     "    ax = sns.heatmap(precision_recall_fscore,\n",
     "                     cmap='Blues',\n",
-    "                     xticklabels=charges,\n",
+    "                     xticklabels=emotions,\n",
     "                     yticklabels=['Precision', 'Recall', 'Fscore'],\n",
     "                     annot=True)\n",
     "    ax.set_yticklabels(ax.get_yticklabels(), rotation=0)\n",
-    "    plt.title('Precision, Recall and Fscore for charges')\n",
+    "    plt.title('Precision, Recall and Fscore for emotions')\n",
     "    plt.savefig(output_folder + 'prec-rec-fscore')"
    ]
   },
@@ -507,7 +497,7 @@
     "for i, label in enumerate(different_labels_pred):\n",
     "    different_label_counts_pred_expanded[label] = different_label_counts_pred[i]\n",
     "\n",
-    "plot_largest_charge_distribution(different_label_counts_true_expanded,\n",
+    "plot_largest_emotion_distribution(different_label_counts_true_expanded,\n",
     "                                 different_label_counts_pred_expanded,\n",
     "                                 all_x,\n",
     "                                 output_folder)"
@@ -533,7 +523,7 @@
     "# Only 1 emotion rows, take the highest prediction as score\n",
     "y_true_single = np.argmax(y_true[single_emotion_rows], axis=1)\n",
     "y_pred_single = np.argmax(y_pred[single_emotion_rows], axis=1)\n",
-    "plot_largest_charge_confusion_matrix(y_true_single, y_pred_single, all_emotions, output_folder)\n",
+    "plot_largest_emotion_confusion_matrix(y_true_single, y_pred_single, all_emotions, output_folder)\n",
     "plot_precision_recall_fscore(y_true_single, y_pred_single, all_emotions, output_folder)"
    ]
   },
